/*
 * ChatSource.h
 *
 *      Author: Andreas Volz
 */

#ifndef CHATSOURCE_H_
#define CHATSOURCE_H_
// @formatter:off
enum class ChatSource
{
  FormatA,
  FormatB
};
// @formatter:on
#endif /* CHATSOURCE_H_ */
